# stardustproof-cli

./: .env.smoke.example  .gitignore  AGENTS.md  README.md  pyproject.toml  stardust_defaults.json
.github/workflows/: release.yml
release/: INSTALL.md  install.sh  sources.lock.json
scripts/: build_patched_ffmpeg.sh  build_release.py  run_smoke.sh  start-dev-keystore.sh
src/stardustproof_cli/: __init__.py  cli.py  config.py  manifest_store.py  media_input.py  stardust.py  verify.py
src/stardustproof_cli/certs/: castlabs_c2pa_ca.cert.pem  trusted_publisher_ca.cert.pem
tests/: test_cli.py  test_config.py  test_integration_smoke.py  test_long_video_scale.py  test_manifest_store.py  test_media_input.py  test_release_build.py  test_verify.py
tests/fixtures/: README.md
tests/fixtures/bbb-segmented/: init.m4s  manifest.mpd  seg-0001.m4s  seg-0002.m4s  seg-0003.m4s  seg-0004.m4s  seg-0005.m4s  seg-0006.m4s  seg-0007.m4s  seg-0008.m4s
